Footer link alignment fix

--- a/src/targets/meandall/styles/views/footer.less
+++ b/src/targets/meandall/styles/views/footer.less
@@ -38,6 +38,7 @@ footer {
       line-height:1.75em;
     }
     a {
+      display:inline-block;
       color: @c-black;
       &:hover {
         text-decoration:underline;
@@ -46,7 +47,7 @@ footer {
     nav {
       .clearfix;
       ul {
-        padding-right:10px;
+        padding-left:20px;
         width:50%;
         box-sizing:border-box;
         float:left;
